--- a/stage2/src/components/Components.css
+++ b/stage2/src/components/Components.css
@@ -186,3 +186,10 @@ h2{
     font-size: large;
     width:150px;
 }
+
+.timer{
+    margin-left: 20px;
+    background-color: antiquewhite;
+    border-radius: 5px;
+    padding: 5px;
+}
